Project Detail Site

--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,9 @@
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
     "@material-ui/core": "^4.12.4",
+    "@swimlane/ngx-graph": "^8.2.1",
     "angular-material-data-table": "^0.10.10",
+    "drawflow": "^0.0.59",
     "material-table": "^2.0.5",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -32,7 +34,13 @@
     "@angular-devkit/build-angular": "^16.1.1",
     "@angular/cli": "~16.1.1",
     "@angular/compiler-cli": "^16.1.0",
+    "@types/d3-dispatch": "^3.0.2",
+    "@types/d3-drag": "^3.0.2",
+    "@types/d3-shape": "^3.1.1",
+    "@types/d3-timer": "^3.0.0",
+    "@types/drawflow": "^0.0.5",
     "@types/jasmine": "~4.3.0",
+    "@types/node": "^20.3.3",
     "css-loader": "^6.7.3",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.0",
