Updates in several files

--- a/client/angular.json
+++ b/client/angular.json
@@ -40,6 +40,11 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "allowedCommonJsDependencies": [
+              "webcola",
+              "dagre",
+              "moment"
+            ],
             "outputPath": "dist/client",
             "index": "src/index.html",
             "main": "src/main.ts",
