--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "angular-material-data-table": "^0.10.10",
     "drawflow": "^0.0.59",
     "material-table": "^2.0.5",
+    "moment": "^2.29.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -55,5 +56,8 @@
     "typescript": "~5.1.3",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
+  },
+  "resolutions": {
+    "d3-selection": "1.3.0"
   }
 }
