--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "@material-ui/core": "^4.12.4",
     "@swimlane/ngx-graph": "^8.2.1",
     "angular-material-data-table": "^0.10.10",
+    "bootstrap": "^5.3.0",
     "drawflow": "^0.0.59",
     "material-table": "^2.0.5",
     "moment": "^2.29.4",
