--- a/client/package.json
+++ b/client/package.json
@@ -25,10 +25,24 @@
     "@swimlane/ngx-graph": "^8.2.1",
     "angular-material-data-table": "^0.10.10",
     "bootstrap": "^5.3.0",
+    "core-js": "2.5.1",
+    "d3-array": "1.2.1",
+    "d3-brush": "1.0.4",
+    "d3-color": "1.1.0",
+    "d3-force": "1.1.0",
+    "d3-format": "1.2.2",
+    "d3-hierarchy": "1.1.6",
+    "d3-interpolate": "1.1.6",
+    "d3-scale": "2.0.0",
+    "d3-selection": "1.3.0",
+    "d3-shape": "1.2.0",
+    "d3-time-format": "2.1.1",
+    "d3-transition": "1.1.1",
     "drawflow": "^0.0.59",
     "material-table": "^2.0.5",
     "moment": "^2.29.4",
     "rxjs": "~7.8.0",
+    "svg": "^0.1.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
